--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 script: "rspec spec"
-before_install: gem update --system
+before_install:
+  - rails g has_followers:migration
+  - rake db:migrate
+language: ruby
 rvm:
   - 1.8.7
   - 1.9.2
