--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ script: "rspec spec"
 before_install:
   - rails g has_followers:migration
   - rake db:migrate
+env:
+  - DB=sqlite
 language: ruby
 rvm:
   - 1.8.7
